--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,15 @@ body {
   font-size: calc(10px + 2vmin);
   color: #fff;
 }
+
+.task-item {
+  display: flex;
+}
+
+.task-title {
+  margin: 0;
+}
+
+button {
+  margin: 0 20px;
+}
